--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 OPENAI_API_KEY=your_openai_key
 GEMINI_API_KEY=your_gemini_key
 OPENAI_MODEL=gpt-5.2
-GEMINI_MODEL=gemini-3-flash
+GEMINI_MODEL=gemini-2.0-flash
 PORT=3000
