Add Gemini thinking budget config for lower TTFT

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
-OPENAI_API_KEY=your_openai_key
-GEMINI_API_KEY=your_gemini_key
-OPENAI_MODEL=gpt-5.2
-GEMINI_MODEL=gemini-3-flash
+# Server
+HOST=0.0.0.0
 PORT=3000
+
+# OpenAI
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-5.2
+
+# Gemini
+GEMINI_API_KEY=
+GEMINI_MODEL=gemini-3-flash
+# 0 = thinking aus (niedrigste TTFT), leer = Provider-Default
+GEMINI_THINKING_BUDGET=0
