Add Azure Foundry GPT-5.2 as third benchmark model

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,10 @@ GEMINI_API_KEY=
 GEMINI_MODEL=gemini-3-flash
 # 0 = thinking aus (niedrigste TTFT), leer = Provider-Default
 GEMINI_THINKING_BUDGET=0
+
+# Azure AI Foundry (Microsoft)
+AZURE_FOUNDRY_ENDPOINT=
+AZURE_FOUNDRY_API_KEY=
+AZURE_FOUNDRY_DEPLOYMENT=
+AZURE_FOUNDRY_MODEL=gpt-5.2
+AZURE_FOUNDRY_API_VERSION=2024-10-21
